<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/menu_drawer_select"
        android:orderInCategory="0"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/select_town" />

    <item
        android:id="@+id/menu_drawer_current_location"
        android:orderInCategory="5"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/current_location" />

    <group android:id="@+id/menu_group_history">

        <item
            android:id="@+id/menu_drawer_add_favorite"
            android:orderInCategory="10"
            android:icon="@android:drawable/star_off"
            android:title="@string/add_favorite" />
    </group>

    <item
        android:id="@+id/menu_drawer_clear"
        android:orderInCategory="990"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:title="@string/clear_history" />

    <item
        android:id="@+id/menu_drawer_about"
        android:orderInCategory="1000"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about" />

</menu>


















