<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/today_weather_time"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/now" />

    <ImageView
        android:id="@+id/today_weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:contentDescription="@string/wind"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <TextView
        android:id="@+id/today_weather_temperature"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/not_available"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>