<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentWeatherToday">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upperPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragmentWeatherToday">

        <TextView
            android:id="@+id/textViewTown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/town"
            android:textSize="42sp"
            app:layout_constraintBottom_toTopOf="@id/textViewSite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textViewSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@id/weatherNow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTown" />

        <LinearLayout
            android:id="@+id/weatherNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/conditions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSite">


            <TextView
                android:id="@+id/currentTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:maxLines="1"
                android:text="@string/not_available"
                android:textAlignment="textEnd"
                android:textSize="54sp" />

            <ImageView
                android:id="@+id/conditionsImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitStart"
                android:contentDescription="@string/not_available"
                app:srcCompat="@android:drawable/ic_menu_view" />

        </LinearLayout>

        <TextView
            android:id="@+id/conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@id/feelsLike"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherNow" />

        <TextView
            android:id="@+id/feelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/conditions"
            app:layout_constraintVertical_bias="1.0" />

        <TableLayout
            android:id="@+id/todayTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="8dp"
            android:stretchColumns="*"
            app:layout_constraintTop_toBottomOf="@id/feelsLike">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/wind"
                    app:srcCompat="@android:drawable/ic_menu_view" />

                <TextView
                    android:id="@+id/windSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/windSpeed" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:text="@string/now" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="15:00" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="18:00" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/wind"
                    app:srcCompat="@android:drawable/ic_menu_view" />

                <TextView
                    android:id="@+id/pressureValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/pressureValue" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/wind"
                    app:srcCompat="@android:drawable/ic_menu_view" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/wind"
                    app:srcCompat="@android:drawable/ic_menu_view" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/wind"
                    app:srcCompat="@android:drawable/ic_menu_view" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/wind"
                    app:srcCompat="@android:drawable/ic_menu_view" />

                <TextView
                    android:id="@+id/humidityValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/humidityValue" />

                <TextView
                    android:id="@+id/tempNow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:text="@string/not_available"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tempNext3H"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/not_available"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tempNext6H"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/not_available"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>